<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:textSize="100sp">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            

            />
    </TextView>

    <TextView
        android:id="@+id/Fahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:textSize="100sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_7"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="buttonClicked"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_9"
            android:textSize="42sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_4"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_5"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_6"
            android:textSize="42sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_1"
            android:textSize="42sp"
            tools:text="1" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_2"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_3"
            android:textSize="42sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_AC"
            android:textSize="42sp" />


        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_0"
            android:textSize="42sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClicked"
            android:text="@string/_X"
            android:textSize="42sp" />

    </TableRow>
</android.support.v7.widget.LinearLayoutCompat>